add color to headings

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <title>Hello World!</title>
 </head>
 <body>
-  <h1>안녕 세상!</h1>
-  <p>안녕 세상 나는 이응진의 웹페이지야.</p>
+  <h1 style="color:#ff5533; background-color:black">안녕 세상!</h1>
+  <h6 style="color:#b0ceff; background-color:black">세상에 불만있냐?</h6>
+  <p style="color:red;background-color: bisque;">안녕 세상 나는 이응진의 웹페이지야.</p>
   <p>단락에 대해서 연습하고 있지.</p>
-  <pre>pre도 연습했엉 글자 스타일이 다르게 나왕.</pre>
+  <pre style="color:aqua;background-color: black;">pre도 연습했엉 글자 스타일이 다르게 나왕.</pre>
   <a href="https://www.naver.com">네이버</a>
   <img src="m1-mac.jpg" alt="m1 맥북 사진" width="300px"/>
 </body>
