--- a/index.html
+++ b/index.html
@@ -2,24 +2,7 @@
 <!DOCTYPE html>
 <head>
   <title>Hello World!</title>
-  <style>
-    h1 {
-      color: #ff5533;
-      background-color: black;
-    }
-    h6 {
-      color:#b0ceff;
-      background-color: black;
-    }
-    p {
-      color:red;
-      background-color: bisque;
-    }
-    pre {
-      color:aqua;
-      background-color: black;
-    }
-  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <h1>안녕 세상!</h1>
