--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
   <h1>안녕 세상!</h1>
   <h6>세상에 불만있냐?</h6>
-  <p >안녕 세상 나는 이응진의 웹페이지야.</p>
-  <p>단락에 대해서 연습하고 있지.</p>
+  <p id="p1">안녕 세상 나는 이응진의 웹페이지야.</p>
+  <p id="p2">단락에 대해서 연습하고 있지.</p>
+  <p id="p3">세번째 단락.</p>
   <pre>pre도 연습했엉 글자 스타일이 다르게 나왕.</pre>
   <a href="https://www.apple.com">애플</a>
   <img src="m1-mac.jpg" alt="m1 맥북 사진" width="300px"/>
