--- a/index.html
+++ b/index.html
@@ -3,15 +3,46 @@
 <head>
   <title>Hello World!</title>
   <link rel="stylesheet" href="index.css">
+  <style>
+    table, th, td {
+      border: 1px solid black;
+      padding: 8px;
+    }
+    th {
+      color: blue;
+    }
+  </style>
 </head>
 <body>
   <h1>안녕 세상!</h1>
-  <h6>세상에 불만있냐?</h6>
-  <p id="p1">안녕 세상 나는 이응진의 웹페이지야.</p>
+  <h6>m1 맥북이 짱이야.</h6>
+  <p id="p1">m1 칩은 열이 거의없어.</p>
   <p id="p2">단락에 대해서 연습하고 있지.</p>
   <p id="p3">세번째 단락.</p>
   <pre>pre도 연습했엉 글자 스타일이 다르게 나왕.</pre>
-  <a href="https://www.apple.com">애플</a>
-  <img src="m1-mac.jpg" alt="m1 맥북 사진" width="300px"/>
+    <img src="m1-mac.jpg" alt="m1 맥북 사진" width="300px"/>
+  <div>
+    <a href="https://www.apple.com">애플</a>
+    <a href="https://www.apple.com" target="_black">새페이지 애플</a>
+  </div>
+  <div>
+    <table style="width: 100%">
+      <tr>
+        <th>FirstName</th>
+        <th>LastName</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>응진</td>
+        <td>이</td>
+        <td>30대</td>
+      </tr>
+      <tr>
+        <td>잼민</td>
+        <td>이</td>
+        <td>10대</td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
