update readme file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Hello World!</title>
   <link rel="stylesheet" href="index.css">
+  <script defer src="./index.js"></script>
 </head>
 <body>
   <h1>안녕 세상!</h1>
@@ -46,6 +47,10 @@
       <li>트루먼 쇼</li>
       <li>블랙스와</li>
     </ol>
+  </div>
+  <div>
+    <div id="contents"></div>
+    <button type="button" onclick="hello('hello wolrd')">안녕</button>
   </div>
 </body>
 </html>
